snapshots/parsers/syntax/library/functions/datetime/month/month_debug_print.snap
---
source: src/syntax/library/functions/datetime/month.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Month
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: Now
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
